[package]
name = "typelayout"
version = "0.1.0"
authors = ["Jack Wrenn <me@jswrenn.com>"]
license = "MIT"
description = "type-level layout reflection"
repository = "https://github.com/jswrenn/typelayout"
readme = "README.md"
edition = "2018"

[dependencies]
typenum = "1.10.0"
frunk = {git = "https://github.com/jswrenn/frunk.git", branch = "generic-atoms"}
frunk_core = {git = "https://github.com/jswrenn/frunk.git", branch = "generic-atoms"}

[dependencies.static_assertions]
version = "0.3.4"
features = ["nightly"]